--- a/Web_Fundamentals/CSS/User_Card/index.html
+++ b/Web_Fundamentals/CSS/User_Card/index.html
@@ -9,10 +9,10 @@
         <div class="block1">
         </div>
         <div class="user-icon">
-            <img src="user-circle.png" style="height: 70px;">
+            <img src="user-circle.png" alt="user icon" style="height: 70px;">
             <h1>Jane Doe</h1>
             <div class="my_mark">
-                <img src="map-marker.png" style="height: 15px;">
+                <img src="map-marker.png" alt="marker image" style="height: 15px;">
                 <p id="my_loc">Seattle</p>
             </div>
             <div class="my_info">
@@ -20,7 +20,7 @@
                 <p>Master of shadows and the Internet!</p>
             </div>
             <div class="my_mark">
-                <img src="gear.png" style="height: 15px;">
+                <img src="gear.png" alt="gear icon" style="height: 15px;">
                 <a href="#" id="my_profile" style="color:darkslateblue;">edit profile</a>
             </div>
         </div>
